--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,8 +28,13 @@
         android:label="fragment_news"
         tools:layout="@layout/fragment_news" />
     <fragment
-        android:id="@+id/profileFragment"
+        android:id="@+id/navigation_profile"
         android:name="kg.geektech.newsapp39.ui.profile.ProfileFragment"
         android:label="profile_fragment"
         tools:layout="@layout/profile_fragment" />
+    <fragment
+        android:id="@+id/navigation_board"
+        android:name="kg.geektech.newsapp39.ui.board.BoardFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_board" />
 </navigation>
