--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -12,10 +12,22 @@
         android:id="@+id/avatar_profile"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/x3x"
         app:civ_border_color="#FF000000"
-        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/nickname"
+        android:layout_width="100dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="14dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/avatar_profile" />
 </androidx.constraintlayout.widget.ConstraintLayout>
