--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,7 +39,7 @@
         tools:layout="@layout/fragment_board" />
     <fragment
         android:id="@+id/navigation_login"
-        android:name="kg.geektech.newsapp39.ui.login.loginFragment"
+        android:name="kg.geektech.newsapp39.ui.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" />
 </navigation>
