Update App for me. 28.04.2022 1. add anim for avatar

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,6 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonGoogle"
-        android:text="Вход через Google"
+        android:text="@string/sign_in_google"
         />
 </FrameLayout>
