--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         style="@style/ButtonStyle"
-        android:text="SKIP"
+        android:text="@string/skip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
